# stuff-excange

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
app/: Dockerfile  manage.py  requirements.txt
app/exchangeapp/: admin.py  forms.py  models.py  urls.py  views.py
app/exchangeapp/management/commands/: wait_for_db.py
app/exchangeapp/migrations/: 0001_initial.py  0002_auto_20210925_0827.py  0003_product_exchange_offer.py  0004_alter_product_exchange_offer.py  0005_product_owner.py
app/exchangeapp/templates/: add_product.html  all_products.html  base.html  pagination.html
app/exchangeapp/templates/account/: base.html  login.html  logout.html
app/exchangeapp/templates/inlines/: footer.html  head.html  modal.html  navbar.html  pagination.html  scripts.html
app/exchangeapp/templates/product/: add_product.html  all_products.html  product_details.html  user_products.html
app/stuff_exchange/: asgi.py  settings.py  urls.py  wsgi.py
app/user_profile/: admin.py  forms.py  models.py
app/user_profile/migrations/: 0001_initial.py  0002_customuser_city.py
nginx/: nginx.conf
