[tool.poetry]
name = "stuff-excange"
version = "0.1.0"
description = ""
authors = ["savilard <vitaliyantonoff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
environs = "^9.3.3"
django-phonenumber-field = "^5.2.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2.2"
wemake-python-styleguide = "^0.15.3"
mypy = "^0.910"
black = "^21.9b0"
pytest = "^6.2.5"
flake8-pytest-style = "^1.5.0"
flake8-django = "^1.1.2"
flake8-logging-format = "^0.6.0"
pytest-django = "^4.4.0"
pytest-randomly = "^3.10.1"
pytest-deadfixtures = "^2.2.1"
django-stubs = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
